// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Icon / Category / Communication 8px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Atoms / Icon / Category / Communication 16px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Clock16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M9 4v3h3v2H7V4h2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-2 0A6 6 0 112 8a6 6 0 0112 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ClockFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM9 7V3H7V9H13V7H9Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Comment16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M0 0H16V12H5.33333L0 16V0ZM2 2V12L4.66667 10H14V2H2Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Dislike16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M5 11.4142L4.58579 11H2C0.895431 11 0 10.1046 0 9V2H4C4.70214 2 5.31977 2.36182 5.67661 2.90917L6.58579 2H11.3401C12.7838 2 14.0227 3.02822 14.2888 4.44713L15.0388 8.44713C15.3849 10.2934 13.9686 12 12.0901 12H10C10 14.2091 8.20914 16 6 16H5V11.4142ZM7 13.7324V10.5858L6 9.58579V5.41421L7.41421 4H11.3401C11.8214 4 12.2343 4.34274 12.323 4.81571L13.073 8.81571C13.1884 9.43113 12.7163 10 12.0901 10H8V12C8 12.7403 7.5978 13.3866 7 13.7324ZM2 9H4V4H2V9Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        DislikeFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M6 11L5 10V5L7 3H11.3401C12.3026 3 13.1285 3.68548 13.3059 4.63142L14.0559 8.63142C14.2867 9.86225 13.3424 11 12.0901 11H9V12C9 13.6569 7.65685 15 6 15V11Z"
        fill="currentColor"
      />
      <path
        d="M1 9C1 9.55228 1.44772 10 2 10H4V4C4 3.44772 3.55228 3 3 3H1V9Z"
        fill="currentColor"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Error16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M1 5.1L5.1 1h5.8L15 5.1v5.8L10.9 15H5.1L1 10.9V5.1z"
        fill="transparent"
        stroke="currentColor"
        strokeWidth={2}
      />
      <path
        clipRule="evenodd"
        d="M9 4v5H7V4h2zM9 10v2H7v-2h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ErrorFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M4.686 0h6.628L16 4.686v6.628L11.314 16H4.686L0 11.314V4.686L4.686 0zM9 9V3H7v6h2zm0 4v-2H7v2h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ExclamationMark16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M9 0v11H7V0h2zM9 13v3H7v-3h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Flag16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M14.863 0H1.14v16h2V9h11.723l-2.571-4.5L14.863 0zM3.14 7h8.277L9.988 4.5 11.417 2H3.14v5z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FlagFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M14.863 0l-2.571 4.5L14.863 9H3.14v7h-2V0h13.723z"
        fill="currentColor"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Help16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8.468 9.618H6.896v-.204c0-.8 0-1.174 1.212-2.16l.115-.093c.473-.384.833-.677.833-1.155 0-.456-.324-.816-.972-.816-.672 0-1.044.42-1.2.924H5.072C5.312 4.482 6.536 3.63 8.12 3.63c1.668 0 2.808.888 2.808 2.292 0 .936-.396 1.428-1.464 2.34l-.044.037c-.48.4-.823.685-.916 1.139l-.036.18zM6.764 10.458h1.884v1.908H6.764v-1.908z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M8 16A8 8 0 108 0a8 8 0 000 16zm0-2A6 6 0 108 2a6 6 0 000 12z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        HelpFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8.46802 9.61801H6.89602L6.89602 9.41447C6.89591 8.61476 6.89585 8.24038 8.10802 7.254C8.14692 7.22218 8.18524 7.19107 8.22284 7.16053C8.69563 6.77663 9.05602 6.48399 9.05602 6.006C9.05602 5.55 8.73202 5.19 8.08402 5.19C7.41202 5.19 7.04002 5.61001 6.88402 6.11401H5.07202C5.31202 4.48201 6.53602 3.63 8.12002 3.63C9.78802 3.63 10.928 4.518 10.928 5.92201C10.928 6.85801 10.532 7.35001 9.46402 8.262C9.44921 8.27434 9.43453 8.28657 9.41997 8.29869C8.9391 8.69908 8.5972 8.98376 8.50402 9.43801L8.46802 9.61801ZM6.76402 10.458H8.64802V12.366H6.76402V10.458Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Information16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M7 4h2v2H7V4zM7 7h2v5H7V7z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M8 16A8 8 0 108 0a8 8 0 000 16zm0-2A6 6 0 108 2a6 6 0 000 12z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InformationFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M8 16A8 8 0 108 0a8 8 0 000 16zM7 4h2v2H7V4zm0 3h2v5H7V7z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InformationMark16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M7 15V5h2v10H7zM7 3V1h2v2H7z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        15
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Like16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M5 4.58579L4.58579 5H2C0.895431 5 0 5.89543 0 7V14H4C4.70214 14 5.31977 13.6382 5.67661 13.0908L6.58579 14H11.3401C12.7838 14 14.0227 12.9718 14.2888 11.5529L15.0388 7.55287C15.3849 5.70662 13.9686 4 12.0901 4H10C10 1.79086 8.20914 0 6 0H5V4.58579ZM7 2.26756V5.41421L6 6.41421V10.5858L7.41421 12H11.3401C11.8214 12 12.2343 11.6573 12.323 11.1843L13.073 7.18429C13.1884 6.56887 12.7163 6 12.0901 6H8V4C8 3.25972 7.5978 2.61337 7 2.26756ZM2 7H4V12H2V7Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        16
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LikeFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M6 5L5 6V11L7 13H11.3401C12.3026 13 13.1285 12.3145 13.3059 11.3686L14.0559 7.36858C14.2867 6.13775 13.3424 5 12.0901 5H9V4C9 2.34315 7.65685 1 6 1V5Z"
        fill="currentColor"
      />
      <path
        d="M1 7C1 6.44772 1.44772 6 2 6H4V12C4 12.5523 3.55228 13 3 13H1V7Z"
        fill="currentColor"
      />
      <title>
        17
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Warning16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8 10H10L10 5.5H8L8 10Z"
        fill="#282823"
      />
      <path
        d="M8 12.5H10V10.75H8L8 12.5Z"
        fill="#282823"
      />
      <path
        clipRule="evenodd"
        d="M11.0031 1.90646C10.1128 0.364514 7.88722 0.364512 6.99698 1.90646L1.31186 11.7534C0.421615 13.2953 1.53442 15.2228 3.31491 15.2228H14.6851C16.4656 15.2228 17.5784 13.2953 16.6882 11.7534L11.0031 1.90646ZM8.72903 2.90646C8.84947 2.69785 9.15058 2.69785 9.27102 2.90646L14.9561 12.7534C15.0766 12.962 14.926 13.2228 14.6851 13.2228H3.31491C3.07402 13.2228 2.92347 12.962 3.04391 12.7534L8.72903 2.90646Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        18
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        WarningFill16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M9.3 1.5a1.5 1.5 0 00-2.6 0L.204 12.754a1.5 1.5 0 001.3 2.25h12.994a1.5 1.5 0 001.3-2.25L9.299 1.5zM7 10h2V5H7v5zm0 3h2v-2H7v2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        19
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Communication 24px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Article24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <g
        fill="currentColor"
      >
        <path
          d="M1 7H23V5H1V7Z"
        />
        <path
          clipRule="evenodd"
          d="M1 9H11V19H1V9ZM3 11V17H9V11H3Z"
          fillRule="evenodd"
        />
        <path
          d="M23 11H13V9H23V11Z"
        />
        <path
          d="M13 19H23V17H13V19Z"
        />
        <path
          d="M23 15H13V13H23V15Z"
        />
      </g>
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Blocked24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1ZM6.38233 4.96809C7.922 3.73647 9.87499 3 12 3C16.9706 3 21 7.02944 21 12C21 14.125 20.2635 16.078 19.0319 17.6177L6.38233 4.96809ZM4.96811 6.3823C3.73648 7.92197 3 9.87498 3 12C3 16.9706 7.02944 21 12 21C14.125 21 16.078 20.2635 17.6177 19.0319L4.96811 6.3823Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Clock24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M13 5v6h6v2h-8V5h2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11zm-2 0a9 9 0 11-18 0 9 9 0 0118 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ClockFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM13 11V5H11V13H19V11H13Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Comment24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M18 9H6V7H18V9Z"
        fill="currentColor"
      />
      <path
        d="M6 13H14V11H6V13Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M1 2H23V18H8.30278L1 22.8685V2ZM3 4V19.1315L7.69722 16H21V4H3Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Dislike24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M4 16C2.89543 16 2 15.1046 2 14V4H6C6.70214 4 7.31977 4.36182 7.67661 4.90917L8.58579 4H16.6577C18.4931 4 20.0931 5.24919 20.5382 7.02986L22.0382 13.0299C22.6694 15.5544 20.76 18 18.1577 18H14V20C14 22.2091 12.2091 24 10 24H8V17.4142L6.58579 16H4ZM6 14V6H4V14H6ZM8 14.5858L10 16.5858V22C11.1046 22 12 21.1046 12 20V16H18.1577C19.4588 16 20.4135 14.7772 20.098 13.5149L18.598 7.51493C18.3754 6.62459 17.5754 6 16.6577 6H9.41421L8 7.41421V14.5858Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        DislikeFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M3 15C2.44772 15 2 14.5523 2 14V5H5C5.55228 5 6 5.44772 6 6V15H3Z"
        fill="currentColor"
      />
      <path
        d="M9 17L7 15V7L9 5H16.6577C18.0343 5 19.2342 5.93689 19.5681 7.27239L21.0681 13.2724C21.5415 15.1658 20.1094 17 18.1577 17H13V20C13 21.6569 11.6569 23 10 23H9V17Z"
        fill="currentColor"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Error24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M7.444 1h9.112L23 7.444v9.112L16.556 23H7.444L1 16.556V7.444L7.444 1zm.828 2L3 8.272v7.456L8.272 21h7.456L21 15.728V8.272L15.728 3H8.272z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M13 6v8h-2V6h2zM13 16v2h-2v-2h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        8
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ErrorFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M16.556 1H7.444L1 7.444v9.112L7.444 23h9.112L23 16.556V7.444L16.556 1zM13 6v8h-2V6h2zm0 12v-2h-2v2h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        9
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ExclamationMark24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M13 1v17h-2V1h2zM13 20v3h-2v-3h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        10
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Facebook24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z"
        fill="currentColor"
      />
      <title>
        11
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Faq24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M10.39 9.85H9.08v-.17c0-.666 0-.978 1.01-1.8l.096-.078c.394-.32.694-.564.694-.962 0-.38-.27-.68-.81-.68-.56 0-.87.35-1 .77H7.56c.2-1.36 1.22-2.07 2.54-2.07 1.39 0 2.34.74 2.34 1.91 0 .78-.33 1.19-1.22 1.95l-.037.03c-.4.334-.685.571-.763.95l-.03.15zM8.97 10.55h1.57v1.59H8.97v-1.59z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M1 2h18v4h4v17l-5.333-4H5v-3l-4 3V2zm18 13V8h2v11l-2.667-2H7v-2h12zM3 4v11l2.667-2H17V4H3z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        12
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Feedback24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M23 2H1v21.08L7.35 18H23V2zM3 18.92V4h18v12H6.65L3 18.92z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M12 6l1.384 2.309L16 8.917l-1.76 2.035.232 2.684L12 12.586l-2.472 1.05.232-2.684L8 8.917l2.616-.608L12 6z"
        fill="currentColor"
      />
      <title>
        13
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Flag24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M21 1l-4.375 6L21 13H5v10H3V1h18zM5 3h12.066L14.15 7l2.916 4H5V3z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        14
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Help24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M12.552 14h-1.834v-.351c0-.933 0-1.37 1.414-2.521l.134-.11c.552-.447.972-.788.972-1.346 0-.532-.378-.952-1.134-.952-.784 0-1.218.49-1.4 1.078H8.59C8.87 7.894 10.298 6.9 12.146 6.9c1.946 0 3.276 1.036 3.276 2.674 0 1.092-.462 1.666-1.708 2.73l-.051.043c-.561.467-.96.799-1.069 1.329l-.042.324zM10.72 15h2v2h-2v-2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11zm-2 0a9 9 0 11-18 0 9 9 0 0118 0z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        15
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        HelpFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.7181 14H12.5521L12.5941 13.676C12.7028 13.146 13.1017 12.8139 13.6627 12.3468L13.7141 12.304C14.9601 11.24 15.4221 10.666 15.4221 9.57399C15.4221 7.93599 14.0921 6.89999 12.1461 6.89999C10.2981 6.89999 8.87009 7.89399 8.59009 9.79799H10.7041C10.8861 9.20999 11.3201 8.71999 12.1041 8.71999C12.8601 8.71999 13.2381 9.13999 13.2381 9.67199C13.2381 10.2296 12.8176 10.5711 12.266 11.0189C12.2224 11.0544 12.1773 11.091 12.1321 11.128C10.7179 12.2788 10.718 12.7155 10.7181 13.6485L10.7181 14ZM12.72 15H10.72V17H12.72V15Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        16
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Information24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M11 9V7h2v2h-2zM11 17v-7h2v7h-2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11zm0-2a9 9 0 100-18 9 9 0 000 18z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        17
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InformationFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11zM11 9V7h2v2h-2zm0 8v-7h2v7h-2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        18
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InformationMark24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M11 22V6h2v16h-2zM11 4V2h2v2h-2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        19
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Instagram24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M12 2c2.717 0 3.056.01 4.122.06 1.065.05 1.79.217 2.428.465.66.254 1.216.598 1.772 1.153.509.5.902 1.105 1.153 1.772.247.637.415 1.363.465 2.428.047 1.066.06 1.405.06 4.122 0 2.717-.01 3.056-.06 4.122-.05 1.065-.218 1.79-.465 2.428a4.883 4.883 0 01-1.153 1.772c-.5.508-1.105.902-1.772 1.153-.637.247-1.363.415-2.428.465-1.066.047-1.405.06-4.122.06-2.717 0-3.056-.01-4.122-.06-1.065-.05-1.79-.218-2.428-.465a4.89 4.89 0 01-1.772-1.153 4.904 4.904 0 01-1.153-1.772c-.248-.637-.415-1.363-.465-2.428C2.013 15.056 2 14.717 2 12c0-2.717.01-3.056.06-4.122.05-1.066.217-1.79.465-2.428a4.88 4.88 0 011.153-1.772A4.897 4.897 0 015.45 2.525c.638-.248 1.362-.415 2.428-.465C8.944 2.013 9.283 2 12 2zm0 5a5 5 0 100 10 5 5 0 000-10zm6.5-.25a1.25 1.25 0 10-2.5 0 1.25 1.25 0 002.5 0zM12 9a3 3 0 110 6 3 3 0 010-6z"
        fill="currentColor"
      />
      <title>
        20
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Language24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M15.57 13.55h-1.65l-.5-1.55h-2.91l-.5 1.55H8.44l2.42-7.1h2.27l2.44 7.1zm-3.6-6.01l-1.03 3.16h2.05l-1.02-3.16z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M23 2H1v21.08L7.35 18H23V2zM3 18.92V4h18v12H6.65L3 18.92z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        21
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Lightbulb24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M11 4V0h2v4h-2zM15 13a3 3 0 00-3-3v2a1 1 0 011 1h2zM8 22v2h8v-2H8zM3 4l2.828 2.828 1.415-1.414-2.829-2.828L3 4zM16.757 5.414l2.829-2.828L21 4l-2.828 2.828-1.415-1.414z"
        fill="currentColor"
      />
      <path
        d="M7 13a5 5 0 117.5 4.332l-.5.288V21h2v-2.255a7 7 0 10-8 0V21h2v-3.38l-.5-.288A4.998 4.998 0 017 13z"
        fill="currentColor"
      />
      <title>
        22
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Like24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M10 0H8V6.58579L6.58579 8H4C2.89543 8 2 8.89543 2 10V20H6C6.70214 20 7.31977 19.6382 7.67661 19.0908L8.58579 20H16.6577C18.4931 20 20.0931 18.7508 20.5382 16.9701L22.0382 10.9701C22.6694 8.44556 20.76 6 18.1577 6H14V4C14 1.79086 12.2091 0 10 0ZM8 16.5858L9.41421 18H16.6577C17.5754 18 18.3754 17.3754 18.598 16.4851L20.098 10.4851C20.4135 9.22278 19.4588 8 18.1577 8H12V4C12 2.89543 11.1046 2 10 2V7.41421L8 9.41421V16.5858ZM6 10H4V18H6V10Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        23
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        LikeFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M9 7L7 9V17L9 19H16.6577C18.0343 19 19.2342 18.0631 19.5681 16.7276L21.0681 10.7276C21.5415 8.83417 20.1094 7 18.1577 7H13V4C13 2.34315 11.6569 1 10 1H9V7Z"
        fill="currentColor"
      />
      <path
        d="M3 9C2.44772 9 2 9.44772 2 10V19H5C5.55228 19 6 18.5523 6 18V9H3Z"
        fill="currentColor"
      />
      <title>
        24
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Mail24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M22 3H2v4.49l10 7.777 10-7.778V3zM4 6.51V5h16v1.51l-8 6.223-8-6.222z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M2 21V10.49l2 1.555V19h16v-6.955l2-1.556V21H2z"
        fill="currentColor"
      />
      <title>
        25
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Notification24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M19 9a4 4 0 100-8 4 4 0 000 8z"
        fill="currentColor"
      />
      <path
        d="M21 18v-7.341A5.99 5.99 0 0119 11v7a1 1 0 01-1 1H6a1 1 0 01-1-1V6a1 1 0 011-1h7c0-.701.12-1.374.341-2H6a3 3 0 00-3 3v12a3 3 0 003 3h12a3 3 0 003-3z"
        fill="currentColor"
      />
      <title>
        26
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Phone24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M6.3 1.05l3.859 3.86-2.122 4.949 6.114 6.114 4.95-2.122 3.859 3.86-2.673 4.454-.26.13-.448-.894c.448.895.446.895.446.895h-.001l-.004.003-.008.004-.023.01c-.019.01-.043.02-.072.033-.059.026-.14.06-.242.099a7.258 7.258 0 01-.855.26 9.748 9.748 0 01-3.03.224c-2.557-.197-5.957-1.374-9.646-5.063-3.689-3.69-4.866-7.09-5.063-9.646a9.749 9.749 0 01.224-3.03c.088-.364.184-.652.26-.855a4.866 4.866 0 01.131-.314l.011-.023.004-.008.002-.004v-.001s.001-.002.896.446l-.895-.448.13-.26L6.3 1.05zM3.408 5.117a5.487 5.487 0 00-.16.543 7.753 7.753 0 00-.174 2.406c.157 2.04 1.101 5.003 4.483 8.385 3.383 3.383 6.347 4.326 8.386 4.483 1.03.08 1.853-.04 2.406-.174.229-.055.412-.112.543-.159l1.549-2.58-1.798-1.798-4.95 2.121-8.028-8.028 2.121-4.95-1.798-1.798-2.58 1.549zm15.73 15.386l-.002.001h.002zM3.506 4.873V4.87v.002z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        27
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Podcast24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M12 1C9.79086 1 8 2.79086 8 5V11C8 13.2091 9.79086 15 12 15C14.2091 15 16 13.2091 16 11V5C16 2.79086 14.2091 1 12 1ZM10 5C10 3.89543 10.8954 3 12 3C13.1046 3 14 3.89543 14 5V11C14 12.1046 13.1046 13 12 13C10.8954 13 10 12.1046 10 11V5Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        d="M7 11V8H5V11C5 14.5265 7.60771 17.4439 11 17.9291L11 21H9V23H15V21H13L13 17.9291C16.3923 17.4439 19 14.5265 19 11V8H17V11C17 13.7614 14.7614 16 12 16C9.23858 16 7 13.7614 7 11Z"
        fill="currentColor"
      />
      <title>
        28
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Support24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M4.062 8a8.001 8.001 0 0115.876 0H20a3 3 0 013 3v2a3 3 0 01-3 3v2a3 3 0 01-3 3h-3.208a2.5 2.5 0 110-2H17a1 1 0 001-1V9A6 6 0 006 9v7H4a3 3 0 01-3-3v-2a3 3 0 013-3h.062zM4 10a1 1 0 00-1 1v2a1 1 0 001 1v-4zm16 0v4a1 1 0 001-1v-2a1 1 0 00-1-1zm-8.5 9.5a.5.5 0 100 1 .5.5 0 000-1z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        29
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Twitter24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M22.162 5.656a8.385 8.385 0 01-2.402.658A4.196 4.196 0 0021.6 4c-.82.488-1.719.83-2.656 1.015a4.182 4.182 0 00-7.126 3.814 11.874 11.874 0 01-8.62-4.37 4.168 4.168 0 00-.566 2.103c0 1.45.738 2.731 1.86 3.481a4.168 4.168 0 01-1.894-.523v.052a4.185 4.185 0 003.355 4.101 4.211 4.211 0 01-1.89.072A4.185 4.185 0 007.97 16.65a8.395 8.395 0 01-6.19 1.732 11.83 11.83 0 006.409 1.88c7.693 0 11.9-6.373 11.9-11.9 0-.18-.005-.362-.013-.54a8.497 8.497 0 002.087-2.165v-.001z"
        fill="currentColor"
      />
      <title>
        30
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Video24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M10 15.4641L16 12L10 8.53589V15.4641Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M4 4C2.34315 4 1 5.34315 1 7V17C1 18.6569 2.34315 20 4 20H20C21.6569 20 23 18.6569 23 17V7C23 5.34315 21.6569 4 20 4H4ZM3 7C3 6.44772 3.44772 6 4 6H20C20.5523 6 21 6.44772 21 7V17C21 17.5523 20.5523 18 20 18H4C3.44772 18 3 17.5523 3 17V7Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        31
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Warning24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M13.0015 7V15H11.0015V7H13.0015Z"
        fill="currentColor"
      />
      <path
        d="M13.0015 17V19H11.0015V17H13.0015Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M14.6543 2.53158C13.4753 0.489474 10.5277 0.489472 9.34871 2.53158L0.414956 18.0053C-0.764056 20.0474 0.709708 22.6001 3.06773 22.6001H20.9353C23.2933 22.6001 24.767 20.0474 23.588 18.0053L14.6543 2.53158ZM11.0808 3.53158C11.49 2.82281 12.513 2.82281 12.9222 3.53158L21.856 19.0053C22.2652 19.7141 21.7537 20.6001 20.9353 20.6001H3.06773C2.24931 20.6001 1.73779 19.7141 2.14701 19.0053L11.0808 3.53158Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        32
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        WarningFill24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M13.787 3.032c-.794-1.376-2.78-1.376-3.574 0L1.28 18.505c-.794 1.376.199 3.095 1.787 3.095h17.868c1.588 0 2.58-1.72 1.787-3.095L13.787 3.032zM13 15V7h-2v8h2zm0 4v-2h-2v2h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        33
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        WhatsNew24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <g
        fill="currentColor"
      >
        <path
          clipRule="evenodd"
          d="M16 1.38196V20.618L10 17.618V23.618L4 20.618V16H2V5.99999H6.76393L16 1.38196ZM6.76393 16L8 16.618V20.382L6 19.382V16H6.76393ZM14 4.61803L7.23607 7.99999H4V14H7.23607L14 17.382V4.61803Z"
          fillRule="evenodd"
        />
        <path
          d="M19 12H22V10H19V12Z"
        />
        <path
          d="M21.5607 4.93938L19.4394 7.0607L18.0251 5.64648L20.1465 3.52516L21.5607 4.93938Z"
        />
        <path
          d="M18.0001 16L20.1214 18.1213L21.5356 16.7071L19.4143 14.5858L18.0001 16Z"
        />
      </g>
      <title>
        34
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Youtube24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M21.543 6.498C22 8.28 22 12 22 12s0 3.72-.457 5.502c-.254.985-.997 1.76-1.938 2.022C17.896 20 12 20 12 20s-5.893 0-7.605-.476c-.945-.266-1.687-1.04-1.938-2.022C2 15.72 2 12 2 12s0-3.72.457-5.502c.254-.985.997-1.76 1.938-2.022C6.107 4 12 4 12 4s5.896 0 7.605.476c.945.266 1.687 1.04 1.938 2.022zM10 15.5l6-3.5-6-3.5v7z"
        fill="currentColor"
      />
      <title>
        35
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / Communication 32px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Clock32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M17 15V7h-2v10h10v-2h-8z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M31 16c0 8.284-6.716 15-15 15-8.284 0-15-6.716-15-15C1 7.716 7.716 1 16 1c8.284 0 15 6.716 15 15zm-2 0c0 7.18-5.82 13-13 13S3 23.18 3 16 8.82 3 16 3s13 5.82 13 13z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ClockFill32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M16 31C24.2843 31 31 24.2843 31 16C31 7.71573 24.2843 1 16 1C7.71573 1 1 7.71573 1 16C1 24.2843 7.71573 31 16 31ZM17 7V15H25V17H15V7H17Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        ExclamationMark32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M17 2v20h-2V2h2zM17 26v4h-2v-4h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Faq32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        d="M12.212 13.386h1.834l.042-.21c.109-.53.508-.862 1.069-1.33l.051-.042c1.246-1.064 1.708-1.638 1.708-2.73 0-1.638-1.33-2.674-3.276-2.674-1.848 0-3.276.994-3.556 2.898h2.114c.182-.588.616-1.078 1.4-1.078.756 0 1.134.42 1.134.952 0 .558-.42.9-.972 1.347a33.81 33.81 0 00-.134.109c-1.414 1.15-1.414 1.588-1.414 2.52v.238zM14.256 14.366h-2.198v2.226h2.198v-2.226z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M25 8h5v22l-7.5-5H7v-3.333L2 25V3h23v5zm0 12H9.5l-.5.333V23h14.106L28 26.263V10h-3v10zM8.894 18L4 21.263V5h19v13H8.894z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FaqFill32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M25 8V3H2v21.869l5-3.334V25h15.698L30 29.869V8h-5zM9.302 20H25V10h3v16.13L23.303 23H9v-2.799L9.302 20zm4.744-6.614h-1.834v-.237c0-.933 0-1.37 1.414-2.521l.134-.109c.552-.448.972-.79.972-1.347 0-.532-.378-.952-1.134-.952-.784 0-1.218.49-1.4 1.078h-2.114c.28-1.904 1.708-2.898 3.556-2.898 1.946 0 3.276 1.036 3.276 2.674 0 1.092-.462 1.666-1.708 2.73l-.051.043c-.561.467-.96.8-1.069 1.329l-.042.21zm-1.988.98h2.198v2.226h-2.198v-2.226z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Information32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M16 1c8.284 0 15 6.716 15 15 0 8.284-6.716 15-15 15-8.284 0-15-6.716-15-15C1 7.716 7.716 1 16 1zm0 2C8.82 3 3 8.82 3 16s5.82 13 13 13 13-5.82 13-13S23.18 3 16 3zm1 10v10h-2V13h2zm0-4v2h-2V9h2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        InformationMark32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <path
        clipRule="evenodd"
        d="M15 30V8h2v22h-2zM15 5V2h2v3h-2z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Lightbulb32
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={32}
    >
      <g
        fill="currentColor"
      >
        <path
          d="M15 1V5H17V1H15Z"
        />
        <path
          d="M12 27V25H20V27H12Z"
        />
        <path
          d="M6 5L8.82843 7.82843L10.2426 6.41421L7.41421 3.58578L6 5Z"
        />
        <path
          d="M24.5858 3.58579L21.7574 6.41421L23.1716 7.82843L26 5L24.5858 3.58579Z"
        />
        <path
          d="M12 28V30H20V28H12Z"
        />
        <path
          d="M16 9C12.6863 9 10 11.6863 10 15C10 17.392 11.3997 19.459 13.4291 20.4231L14 20.6943V24H12V21.9295C9.61038 20.5473 8 17.9626 8 15C8 10.5817 11.5817 7 16 7C20.4183 7 24 10.5817 24 15C24 17.9626 22.3896 20.5473 20 21.9295V24H18V20.6943L18.5709 20.4231C20.6003 19.459 22 17.392 22 15C22 11.6863 19.3137 9 16 9Z"
        />
        <path
          d="M16 13C17.1046 13 18 13.8954 18 15H20C20 12.7909 18.2091 11 16 11V13Z"
        />
      </g>
      <title>
        8
      </title>
    </svg>
  </div>
</div>
`;
